--- a/labs/lab1/alia/report/task2.ipynb
+++ b/labs/lab1/alia/report/task2.ipynb
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "6f5878ab-b198-4f44-8c99-03230ac721fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "path=f'../result/task2/full_trajectory_mt-275.00_angle-56.00.csv'\n",
-    "data=pd.read_csv(path,sep=' ')\n",
+    "data=pd.read_csv(path,sep=' ')[:10000000]\n",
     "data_last=data.iloc[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "b730c260-ae40-4538-9b38-66e4378ff6a1",
    "metadata": {},
    "outputs": [
